[gd_scene load_steps=15 format=3 uid="uid://b8gs1agqdboak"]

[ext_resource type="Script" path="res://scenes/actors/PlayerActor.gd" id="1_50gu6"]
[ext_resource type="Script" path="res://scripts/idle_wander.gd" id="3_0ms1c"]
[ext_resource type="Texture2D" uid="uid://c70j2b2aumxd2" path="res://amoeba.png" id="3_ilydv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohi0u"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_rm320"]
radius = 100.0

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_dx440"]
points = PackedVector2Array(0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilp2d"]
atlas = ExtResource("3_ilydv")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wu6"]
atlas = ExtResource("3_ilydv")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6g5d"]
atlas = ExtResource("3_ilydv")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxnh4"]
atlas = ExtResource("3_ilydv")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7o8a"]
atlas = ExtResource("3_ilydv")
region = Rect2(1024, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgg3o"]
atlas = ExtResource("3_ilydv")
region = Rect2(2048, 1024, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6ejm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilp2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6g5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxnh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7o8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgg3o")
}],
"loop": true,
"name": &"hero-form-1-movement",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_je8aj"]
size = Vector2(128, 128)

[node name="PlayerActor" type="CharacterBody2D"]
process_mode = 1
input_pickable = true
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_50gu6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ohi0u")

[node name="Detection" type="Area2D" parent="."]

[node name="SenseCircle" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_rm320")

[node name="VisionCone" type="CollisionShape2D" parent="Detection"]
shape = SubResource("ConvexPolygonShape2D_dx440")

[node name="RndStateUpdate" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="detectedStateUpdate" type="Timer" parent="."]

[node name="IdleWander" type="Timer" parent="."]
one_shot = true
script = ExtResource("3_0ms1c")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="ReproductionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 0.872665
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_h6ejm")
animation = &"hero-form-1-movement"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_je8aj")
